# DATX02-17-26

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  DATX021726.cabal  Generator.hs  LICENSE.md  ModelStudentMismatches.md  README.md  stack.yaml  stud.java
Examples/HelloWorld/: stud.java
Examples/HelloWorld/mods/: mod3.java  stud.java
Examples/SumEvenNumbers/mods/: mod1.java  mod2.java  mod3.java  mod4.java  mod5.java
Examples/SumNumbersInput/: mod1.java
Test/: AlphaTest.hs  EvalTest.hs  ForNormTest.hs  MetSortTest.hs  NormalizationTests.hs  ParserTests.hs  PbtTest.hs  QuickCheckTests.hs  StrategyTests.hs  TastyTests.hs  TestFramework.hs  TestMatching.hs  TestPBT.hs  TestStrategies.hs  TestUtil.hs
Test/AlphaTest/: Good1-1.java  Good1.java  Good2-2.java  Good2.java
Test/Eval/: Uppgift12a_stud1.java  Uppgift12a_stud2.java  Uppgift12a_stud3.java  Uppgift12a_stud4.java
Test/ForToWhile/: Good2.java  Test1.java  Test2.java
Test/JavaFiles/: Good1-1.java  Good1.java
Test/MethodSortTest/: Good1-1.java  Good1.java
Test/Model_solutions/: mod1.java  mod2.java  sumNumbers0.java
Test/Norm/: AlphaRTest.hs  CompAssignmentTest.hs  DoWToWhileTest.hs  ElimDeadTest.hs  ElimRedundantTest.hs  FloatToDoubleTest.hs  ForIndexCLTE.hs  ForIndexTest.hs  IfElseEmptyTest.hs  LoopTest.hs  MinusToPlusTest.hs  NormForTest.hs  NormTestUtil.hs  SOPTest.hs  StepOpTest.hs  VarDeclTest.hs
Test/PbtTest/model/: PbtMod1.java  PbtMod2.java
Test/PbtTest/student/: PbtStud1Fail.java  PbtStud2OK.java
Test/Student_solutions/: helloWorld0.java  stud1.java  stud2.java  sumNumbers1.java
Test/Util/: ListTests.hs
Test/fixture/norm/ForIndexCLTE/: Expected1.java  Source1.java
Test/fixture/norm/alpha/: Expected1.java  Source1.java
Test/fixture/norm/compassignment/: Expected1.java  Source1.java
Test/fixture/norm/dowtowhile/: Expected1.java  Source1.java
Test/fixture/norm/elimdead/: Expected1.java  Source1.java
Test/fixture/norm/elimredundant/: Expected1.java  Expected2.java  Source1.java  Source2.java
Test/fixture/norm/floattodouble/: Expected1.java  Source1.java
Test/fixture/norm/forindex/: Expected1.java  Source1.java
Test/fixture/norm/ifelse_empty/: Expected1.java  Source1.java
Test/fixture/norm/loops/: Expected1.java  Source1.java
Test/fixture/norm/minustoplus/: Expected1.java  Source1.java
Test/fixture/norm/normfor/: Expected1.java  Source1.java
Test/fixture/norm/sop/: Expected1.java  Source1.java
Test/fixture/norm/stepop/: Expected1.java  Source1.java
Test/fixture/norm/vardecl/: Expected1.java  Source1.java
Test/fixture/strategies/: depends1.java  depends2.java  helloWorld_model.java  helloWorld_student.java  orderInFor1.java  orderInFor2.java  wide.java  wideish.java
bench/: BenchAlpha.hs  BenchConvert.hs  BenchStrategies.hs
bench/Programs/: wideModel.java  wideStudent.java
docs/: code-style.md
examples/: GeneratorExamples.hs  RoseGenExamples.hs
execsrc/: Eval.hs  Main.hs  Normalizations.hs  ParseArguments.hs  View.hs
libsrc/: AlphaR.hs  AlphaUniplate.hs  EvaluationMonad.hs  GenStrat.hs  IOWrapper.hs  InputMonad.hs  MethodSort.hs  NormFor.hs  NormalizationStrategies.hs  PropertyBasedTesting.hs  RunJavac.hs  SolutionContext.hs  Strategies.hs
libsrc/Class/: Approx.hs  HasError.hs  Sizeables.hs
libsrc/Class/Product/: Flatten.hs  HPair.hs  IxProd.hs  PTravIx.hs  Uncons.hs
libsrc/Core/: History.hs  Phase.hs  Plain.hs  PlainTH.hs
libsrc/Core/Common/: AST.hs  History.hs  Literal.hs  Phase.hs  Purity.hs  SType.hs  TH.hs  Type.hs
libsrc/Core/Start/: AST.hs  Convert.hs  Parse.hs  Phase.hs
libsrc/Core/TypeCheck/: AST.hs  Checker.hs  Phase.hs  SType.hs
libsrc/CoreS/: AST.hs  ASTUnitype.hs  ASTUnitypeUtils.hs  ASTUtils.hs  ConvBack.hs  Convert.hs  Parse.hs  Purity.hs
libsrc/CoreS/Annotated/: AST.hs  Conv.hs
libsrc/CoreS/Common/: Common.hs  Literal.hs  Name.hs  Operator.hs  Type.hs
libsrc/CoreS/Unitype/: ASTUnitype.hs  ASTUnitypeUtils.hs
libsrc/Data/: DTree.hs  FTree.hs  RoseTree.hs
libsrc/Norm/: AllNormalizations.hs  CompAssignment.hs  DoWToFor.hs  DoWToWhile.hs  ElimDead.hs  ElimRedundant.hs  FloatToDouble.hs  ForIndex.hs  ForIndexConstLessThanEq.hs  IfElseEmpty.hs  MinusToPlus.hs  NormCS.hs  NormFor.hs  NormIx.hs  NormM.hs  NormOrd.hs  StepOp.hs  SumsOfProducts.hs  Test.hs  VDTest.hs  VarDecl.hs
libsrc/Util/: Debug.hs  Function.hs  List.hs  Monad.hs  RoseGen.hs  Shrink.hs  TH.hs  Tree.hs
modelsolution/: Upgift8_12.java  Uppgift8_7.java
modelsolution/uppgift12a/: Uppgift12a_1.java  Uppgift12a_2.java  Uppgift12a_3.java  Uppgift12a_4.java  Uppgift12a_5.java  Uppgift12a_6.java  Uppgift12a_7.java  Uppgift12a_8.java  group14.java
modelsolution/uppgift8/: README.txt  Uppgift8_1.java  Uppgift8_10.java  Uppgift8_11.java  Uppgift8_12.java  Uppgift8_13.java  Uppgift8_14.java  Uppgift8_15.java  Uppgift8_2.java  Uppgift8_3.java  Uppgift8_4.java  Uppgift8_5.java  Uppgift8_6.java  Uppgift8_8.java  Uppgift8_9.java
mods/: mod1.java  mod2.java  mod3.java
project/: DATX021726.cabal
src/: Context.hs  CoreAST.hs  EvaluationMonad.hs  GeneratorExamples.hs  InputMonad.hs  Main.hs  NormalizationStrategies.hs  PropertyBasedTesting.hs  PropertyTesting.hs  RunJavac.hs  SolutionContext.hs  TypeCheck.hs
src/Core/: AST.hs  SVec.hs  Start.hs
src/CoreS/: AST.hs  Convert.hs  Parse.hs
src/parser/: .gitignore  Makefile  dump15.cf  java-old.cf  java.cf
