name:         DATX021726
category:     Testing, Compiler, Language
version:      0.1.0.0
cabal-version: >=1.10
synopsis:     automated assessment of programming exercises

description:  Bachelors thesis investigating the automated assessment of programming exercises of imperative languages, specifically Java.

homepage:     https://github.com/Centril/DATX02-17-26
bug-reports:  https://github.com/Centril/DATX02-17-26/issues

license:      GPL-2
license-file: LICENSE.md
author:       Maximilian Algehed <m.algehed@gmail.com>
              Simon Boij <simon@boij.net>
              Mazdak Farrokhzad <twingoow@gmail.com>
              Joel Hultin <joel.hultin@gmail.com>
              Brage Salhus Bunk <bragesb@gmail.com>
              Aleksander Stern Kaar <sternkaar@gmail.com>
maintainer:   twingoow@gmail.com

build-type:   Simple

extra-source-files:
  docs/*.md
  .gitignore
  .travis.yml
  CHANGELOG.md
  AUTHORS.md
  README.md

tested-with:  GHC == 8.0.2

source-repository head
  type:     git
  branch:   dev
  location: git://github.com/Centril/DATX02-17-26.git

executable JAA
  main-is:          Main.hs
  other-modules:    SolutionContext,
                    EvaluationMonad,
                    RunJavac
  build-depends:
      base >=4.8 && < 5
    , safe == 0.3.13
    , lens == 4.14
    , directory >= 1.2
    , ideas >= 1.6
    , transformers >= 0.5 
    , mtl >= 2.2
    , filepath >= 1.4
    , process >= 1.4
    , optparse-applicative >= 0.13
    , language-java == 0.2.8
    , type-natural == 0.7.1.3
    , sized == 0.2.1.0
    , singletons == 2.2
  hs-source-dirs:   src
  default-language: Haskell2010

Test-Suite tests 
  type:            exitcode-stdio-1.0
  hs-source-dirs:  Test 
  main-is:         TastyTests.hs
  build-depends:
      base >= 4.8 && < 5
    , tasty, tasty-hunit, tasty-quickcheck
    , language-java == 0.2.8
  default-language: Haskell2010