name:         DATX021726
category:     Testing, Compiler, Language
version:      0.1.0.0
cabal-version: >=1.10
synopsis:     automated assessment of programming exercises

description:  Bachelors thesis investigating the automated assessment of programming exercises of imperative languages, specifically Java.

homepage:     https://github.com/Centril/DATX02-17-26
bug-reports:  https://github.com/Centril/DATX02-17-26/issues

license:      GPL-2
license-file: LICENSE.md
author:       Maximilian Algehed <m.algehed@gmail.com>
              Simon Boij <simon@boij.net>
              Mazdak Farrokhzad <twingoow@gmail.com>
              Joel Hultin <joel.hultin@gmail.com>
              Brage Salhus Bunk <bragesb@gmail.com>
              Aleksander Stern Kaar <sternkaar@gmail.com>
maintainer:   twingoow@gmail.com

build-type:   Simple

extra-source-files:
  docs/*.md
  .gitignore
  .travis.yml
  CHANGELOG.md
  AUTHORS.md
  README.md

tested-with:  GHC == 8.0.2

source-repository head
  type:     git
  branch:   dev
  location: git://github.com/Centril/DATX02-17-26.git

library
  exposed-modules:
      NormalizationStrategies
    , SolutionContext
    , EvaluationMonad
    , RunJavac
    , InputMonad
    , PropertyBasedTesting
    , GenStrat
    , CoreS.AST
    , CoreS.Convert
    , CoreS.Parse
    , CoreS.ConvBack
    , CoreS.ASTUnitype
    , CoreS.ASTUnitypeUtils
    , Util.Debug
    , Util.Function
    , Util.Monad
    , Util.List
    , Util.RoseGen
    , Util.TH
    , Class.HasError
    , Class.Sizeables
    , Data.RoseTree
    , Norm.NormM
    , Norm.NormCS
    , Norm.VarDecl
    , AlphaR
  build-depends:
      base >=4.8 && < 5
    , lens >= 4.14
    , safe == 0.3.13
    , directory >= 1.2
    , ideas >= 1.6
    , transformers >= 0.5 
    , mtl >= 2.2
    , filepath >= 1.4
    , process >= 1.4
    , optparse-applicative >= 0.13
    , language-java == 0.2.8
    , QuickCheck >= 2.8
    , loch-th == 0.2.1
    , random == 1.1
    , containers == 0.5.7.1
    , uniplate >= 1.6
    , pretty >= 1.1.3.3
    , template-haskell >= 2.11.0.0
    , comonad == 5
    , pointless-fun == 1.1.0.6
    , mmorph == 1.0.9
    , parsec == 3.1.11
    , text == 1.2.2.1
    -- TODO: REMOVE IN PRODUCTION:
    , hscolour == 1.24.1
    -- TODO: REMOVE IN PRODUCTION:
    , pretty-simple == 2.0.0.0
  hs-source-dirs:   libsrc
  default-language: Haskell2010

executable JAA 
  main-is:          Main.hs
  other-modules:    Normalizations,
                    ParseArguments
  build-depends:
      base >=4.8 && < 5
    , lens >= 4.14
    , directory >= 1.2
    , ideas >= 1.6
    , transformers >= 0.5 
    , mtl >= 2.2
    , filepath >= 1.4
    , process >= 1.4
    , optparse-applicative >= 0.13
    , language-java == 0.2.8
    , DATX021726
    , QuickCheck
    , hint == 0.6.0
    , random == 1.1
  hs-source-dirs:   execsrc 
  default-language: Haskell2010

Test-Suite tests 
  type:            exitcode-stdio-1.0
  hs-source-dirs:  Test
  main-is:         TastyTests.hs
  other-modules:
      NormalizationTests
    , Util.ListTests
    , TestUtil
    , Norm.NormTestUtil
    , Norm.VarDeclTest
  default-language: Haskell2010
  build-depends:
      tasty
    , tasty-hunit
    , tasty-golden
    , tasty-quickcheck
    , base
    , language-java == 0.2.8
    , DATX021726
    , lens >= 4.14
    , mtl >= 2.2
    , filepath >= 1.4